--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ MarkupSafe==2.1.4
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
 mattermostwrapper==2.2
-ml-dtypes==0.2.0
+# ml-dtypes==0.2.0
 mpmath==1.3.0
 msgpack==1.0.7
 multidict==5.2.0
